[package]
name = "frame-try-runtime"
version = "0.34.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "FRAME pallet for democracy"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
#codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
codec = { git = "https://github.com/paritytech/parity-scale-codec.git", tag = "parity-scale-codec-v3.6.4", package = "parity-scale-codec", default-features = false, features = ["derive"] }
#scale-info = { git = "https://github.com/paritytech/scale-info.git", tag = "v2.10.0", default-features = false, features = ["derive"] }
frame-support = { path = "../support", default-features = false }
sp-api = { path = "../../primitives/api", default-features = false }
sp-runtime = { path = "../../primitives/runtime", default-features = false }
sp-std = { path = "../../primitives/std", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime", "sp-runtime/try-runtime"]
