[package]
name = "sp-metadata-ir"
version = "0.6.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Intermediate representation of the runtime metadata."
documentation = "https://docs.rs/sp-metadata-ir"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { git = "https://github.com/paritytech/scale-info.git", tag = "v2.10.0", default-features = false, features = ["derive"] }
codec = { git = "https://github.com/paritytech/parity-scale-codec.git", tag = "parity-scale-codec-v3.6.4", package = "parity-scale-codec", default-features = false }

#codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
frame-metadata = { version = "16.0.0", default-features = false, features = ["current"] }
sp-std = { path = "../std", default-features = false }

[features]
default = ["std"]
std = ["codec/std", "frame-metadata/std", "scale-info/std", "sp-std/std"]
