[package]
name = "fork-tree"
version = "12.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Utility library for managing tree-like ordered data with logic for pruning the tree while finalizing nodes."
documentation = "https://docs.rs/fork-tree"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
#codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"] }
codec = { git = "https://github.com/paritytech/parity-scale-codec.git", tag = "parity-scale-codec-v3.6.1", package = "parity-scale-codec", features = ["derive"] }
